nlamah/src/main/resources/org/nlamah/QBase/QL/test/error/doubleDeclaration3.ql
form test
{	
	question3 number "test5"
	question3 number "test6"
}